<resources>
    <string name="app_name">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="stock">Stock</string>
    <string name="expense">Expense</string>
    <string name="notification">Notification</string>
    <string name="add_button">add button</string>
    <string name="cancel">Cancel</string>
    <string name="list_name">List Name</string>
    <string name="list_info">List Info</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_enter_all_data">Enter All Details Correctly!</string>
    <string name="error_require">Require</string>
    <string name="all_ready_exist">All Ready Exist</string>
    <string name="company_list">Company List</string>
    <string name="custom_list">Custom List</string>
    <string name="done">Done</string>
    <string name="fb_mic">fb_mic</string>
    <string name="ibnclose">ibnClose</string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="item_name">Item Name</string>
    <string name="more">more</string>
    <string name="save">Save</string>
    <string name="add_custom_list">Add List</string>
    <string name="edit_button">edit button</string>
    <string-array name="list_type">
        <item>"Custom List"</item>
        <item>"Company List"</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>